# chroma_basics

./: .gitignore  README.md  chroma_basic.ipynb  chromadb_complete_guide.ipynb  embedding.ipynb  env.yml  environment.yml  key_takeaway.md  main.py  pyproject.toml
.github/: copilot-instructions.md
input_file/: sn-1059.txt  sn-1060.txt  sn-1061.txt
my_chroma_db/: chroma.sqlite3
openai_chroma_db/: chroma.sqlite3
research_raw/: model_switching_compatibility_guide.md  nlp_basic.md  rag_embedding_cheuncking.md  research3.md  tranformer_atraining.md
research_raw/embedding_vectordb/: embedding_summary.md  skipgram_summary.md  tranformer_embedding_vectordb.md
research_raw/traditional_nlp/: nlp_foundations_summary_tokenization_to_tf_idf.md
research_raw/transformer/: transformer_arch_summary.md  transformer_attention_summary.md
test_db/: chroma.sqlite3
