[project]
name = "chroma-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "numpy<2",
    "openai>=2.16.0",
    "sentence-transformers>=5.2.2",
    "torch>=2.2.2",
    "torchtext>=0.17.2",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
